--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@telegraf/entity": "^0.3.0",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
+    "chalk": "^5.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jimp": "^0.22.8",
